# needs-config-writer

./: .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yml  gh_pages.yml  release.yml
docs/: behavior.rst  changelog.rst  conf.py  configuration.rst  index.rst  motivation.rst
docs/development/: changelog.rst
needs_config_writer/: __init__.py  builder.py  logging.py  main.py  utils.py
relative/: config.toml
tests/: conftest.py  test_basic.py  test_utils.py
tests/__snapshots__/: test_basic.ambr
tests/complex_setups/generated_config/: schemas.json  ubproject.toml
tests/complex_setups/generated_deps/: needs_test.json
tests/complex_setups/project/: conf.py  index.rst  ubproject.toml
